@@ -7,6 +7,7 @@ xymon (4.3.25) stable; urgency=high
      other graph names (Reported by Jeremy Laidman) 
    * A possible crash in when loading confreport.cgi has been fixed
      (Thanks, Axel Beckert)
+   * Improve error handling slightly in the CGI wrapper
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  Mon, XX Dec 2015 17:40:00 -0800
 
