@@ -5,6 +5,7 @@ Changes from 4.3.24 -> 4.3.25 (unreleased)
   other graph names (Reported by Jeremy Laidman)
 * A possible crash in when loading confreport.cgi has been fixed 
   (Thanks, Axel Beckert)
+* Improve error handling slightly in the CGI wrapper
 
 
 Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
